# store

./: .gitignore  LICENSE  README.md  docker-compose.yml  pom.xml
admin-vue/: package-lock.json  (+2 more)
c/scum2/: CMakeLists.txt  globalhotkeylistener.cpp  globalhotkeylistener.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  scriptthread.cpp  scriptthread.h
c/zotci_tool/: CMakeLists.txt  main.cpp
c/zotci_tool/resources/: resources.qrc  resources.rc
c/zotci_tool/resources/html/: index.html
c/zotci_tool/resources/qml/: main.qml
c/zotci_tool/resources/qml/file_hook/: file_hook_main.qml
c/zotci_tool/src/copy_files/: CopyFiles.cpp  CopyFiles.h
c/zotci_tool/src/file_hook/: Main.cpp  Main.h  file_hook.pro
c/zotci_tool/src/main_window/: MainWindow.cpp  MainWindow.h
c/zotci_tool/src/qpdf/: SplitPDF.cpp  SplitPDF.h
c/zotci_tool/src/wx/: WxUnlock.cpp  WxUnlock.h
store_python/: HELP.md  pyproject.toml  requirements.txt
store_python/CalculatedChecksum_计算校验和/: love.py
store_python/Frida工具Hook/: ctf.py  frida_tool.py  index.js  my_frida.py  package.json
store_python/QTthread/: Spider.py
store_python/backupCopy备份/: MainUI.py  MainWindow.ui
store_python/calc/: calc.py
store_python/example/: main.py
store_python/hello_ai/: iris_logisstic_regression.py
store_python/learnTable/: learnTable.py
store_python/mc_store/动态光源/mod/behavior_pack_fdb228ba/functions/: tick.json
store_python/mc_store/游戏结束零件/mod/behavior_packs/behavior_pack_1hPDjEh6/Parts/EndLogic/: EndLogic.part  endLogicUI.py
store_python/mc_store/游戏结束零件/mod/resource_packs/resource_pack_T1PINQ15/ui/: _ui_defs.json
store_python/mc_store/生物升级零件/mod/resource_packs/resource_pack_aq7LSPlI/ui/: levelUpUI.json
store_python/onlineTranslation在线翻译/: main.py  onlineTranslation_ui.py  onlineTranslation_ui.ui
store_python/onlineTranslation在线翻译/apidemo/: Translate.py
store_python/pkApp/: DoExercise.py  server.py
store_python/qt_gui/: SelectWindow.py
store_python/qt_gui/scum/: main.py  pyproject.toml  scum_server.py
store_python/qt_gui/scum/Default/: Buildings-Armory-Secret_Bunker-Examine_Weapon_Locker_Secret_Bunker_Lockpick.json  Buildings-Warehouse-Military_Base-Examine_Military_Crate_Pile.json
store_python/qt_gui/scum/Override/: Special_Packages-Cargo_Drops-Examine_Pistols_Deagle_05_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Pistols_Deagle_357_CargoDrop.json  Special_Packages-Vault-Examine_Pistols_Deagle_05_Vault_Pack.json  Special_Packages-Vault-Examine_Pistols_Deagle_357_Vault_Pack.json
store_python/qt_gui/scum/StickerSmash/: README.md  app.json  package.json
store_python/qt_gui/scum/config/: 常用命令.md
store_python/qt_gui/scum/config/Nodes/Current/: Depository.json
store_python/qt_gui/scum/config/Nodes/Override/: Depository.json
store_python/qt_gui/scum/config/Spawners/Presets/Override/db/: Buildings-Warehouse-TV_Bunker-Examine_CardBox_Depository.json
store_python/qt_gui/scum/config/Spawners/Presets/Override/空投/: Special_Packages-Cargo_Drops-Examine_AK15_Addons_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_AK15_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_AK47_Addons_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_AKM_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_AKS_74U_Addons_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_ASVal_Addons_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_C4_1_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_C4_4_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Car_3_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_CarbonHunter_Addons_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_CarbonHunter_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Chainsaw_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Drink_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Ghillie_Jacket_1_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Ghillie_Pants_1_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Hiking_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Kar98k_Addons_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Katana_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_LockPicking_2_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_LockPicking_3_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_M16_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_M1891_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_NVG_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Pistols_Block21_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Pistols_M1911_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Pistols_M9_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Pistols_M9_Silver_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Power_Tools_1_CargoDrop.json  Special_Packages-Cargo_Drops-Examine_Power_Tools_2_CargoDrop.json  (+6 more)
store_python/qt_gui/scum/script/: ScheduleChecker.py  ScumServer.py  ServerManager.py  copy_elements.py  generate_elements.py  属性.py
store_python/qt_gui/scum/src/: ScheduleChecker.py  ScumServer.py  SteamCMDManager.py  sub.py
store_python/script/: test.py
store_python/script/crawler/: HELP.md  main.py
store_python/script/crawler/controller/: software_finder.py
store_python/script/crawler/ui/: main_ui.py
store_python/script/game/scum/: AutoExercise.py  锁.py
store_python/script/python跳转登录/: help.txt  log.txt  pyside_app.py  pyside_app.spec  temp.py
store_python/script/split_pdf/: split_pdf.py  view.qml
store_python/script/temp/: temp.py  temp2.py  temp3.py  temp4.py  temp6.py
store_python/script/web/: pyside_app.py
store_python/script/zotci_digital_man/: .qiniu_pythonsdk_hostscache.json  data_type.py  man_api.py  qiniu_server.py  start.exe.spec  zotci_digital_man.py  zotci_digital_man.spec  数字人交付表格.xlsx
store_python/script/zotci_digital_man/qml/: main.qml  test.qml  verify_view.qml  view.qml
store_python/signalAndSlot信号和槽/: MainWIndow.py  ui_main.py
store_python/startupAnimation启动动画/: Test2.py
store_python/wx控制器/: @AutomationLog.txt  autoTalk.py
store_python/数学/: 画圆.py
store_python/生成二维码/: qr.py
store_python/进制转换器/: Main.py
(+1070 files in other folders)
