[tool.poetry]
name = "store-python"
version = "0.1.0"
description = ""
authors = ["BlackBox <vwvmnu@gmail.com>"]
readme = "HELP.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
requests = "^2.32.3"
webdriver-manager = "^4.0.2"
pyautogui = "^0.9.54"
matplotlib = "^3.9.2"
openpyxl = "^3.1.5"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
